<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:orderInCategory="200"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/action_info"/>
    <item
        android:id="@+id/action_freepik"
        android:title="@string/action_info"
        android:orderInCategory="100"
        android:icon="@drawable/ic_http"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/freepik"/>
    <item
        android:id="@+id/action_sair"
        android:orderInCategory="300"
        android:title="@string/action_sair"
        android:icon="@drawable/ic_exit_to_app"
        app:showAsAction="ifRoom"
        android:contentDescription="@string/action_sair"/>
</menu>