<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_degrade_main">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableRow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed">

        <EditText
            android:id="@+id/editTextCalc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:editable="false"
            android:ems="10"
            android:gravity="end"
            android:importantForAutofill="no"
            android:textSize="34sp" />
    </LinearLayout>

    <TableRow
        android:id="@+id/tableRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/button20"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="52dp"
            android:layout_height="48dp"
            android:layout_marginStart="250dp"
            android:gravity="end"
            android:scaleX="1"
            android:scaleY="1"
            app:icon="@android:drawable/ic_input_delete" />
    </TableRow>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/tableRow2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow" />

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableRow3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2">

        <TextView
            android:id="@+id/textBtnC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="clean"
            android:text="@string/action_c"
            android:textAlignment="center"
            android:textColor="@color/colorTextButtonCalcC"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtnParenteses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_parentesis"
            android:textAlignment="center"
            android:textColor="@color/colorTextButtonCalc"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textBtnPorcentagem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_porcentagem"
            android:textAlignment="center"
            android:textColor="@color/colorTextButtonCalc"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtnDividir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_dividir"
            android:textAlignment="center"
            android:textColor="@color/colorTextButtonCalc"
            android:textSize="38sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableRow5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2">

        <TextView
            android:id="@+id/textBtn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_7"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_8"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_9"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtnMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="operacao"
            android:text="@string/action_mult"
            android:textAlignment="center"
            android:textColor="@color/colorTextButtonCalc"
            android:textSize="38sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableRow4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow3">

        <TextView
            android:id="@+id/textBtn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="onClick"
            android:text="@string/action_4"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_5"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_6"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtnSomar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_somar"
            android:textAlignment="center"
            android:textColor="@color/colorTextButtonCalc"
            android:textSize="38sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toTopOf="@+id/tableRow6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow5">

        <TextView
            android:id="@+id/textBtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_1"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_2"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_3"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtnDiminuir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_subtrair"
            android:textAlignment="center"
            android:textColor="@color/colorTextButtonCalc"
            android:textSize="38sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal|center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow4">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_sinal"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textBtn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_0"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtnVirgula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_virgula"
            android:textAlignment="center"
            android:textSize="38sp" />

        <TextView
            android:id="@+id/textBtnIgual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/back_button_calculadora_igual"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal|center_vertical"
            android:onClick="onClick"
            android:text="@string/action_igual"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="38sp" />
    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>